--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -8,8 +8,11 @@
         "type": "leaf",
         "active": true,
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "JavaScript/210217 Map and Set pt.2.md",
+            "mode": "source"
+          }
         }
       }
     ],
@@ -50,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 385.5121879577637
+    "width": 385.5121879577637,
+    "collapsed": true
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -67,6 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "JavaScript/210217 Map and Set pt.2.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -109,15 +114,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "React/Basics/210216 Handling Events.md",
-    "React/Basics/210213 State and Lifecycle.md",
-    "React/Basics/Untitled.md",
+    "JavaScript/210217 Map and Set pt.2.md",
+    "JavaScript/210216 Map and Set pt.1.md",
+    "Untitled.md",
     "JavaScript/210216 Map and Set.md",
-    "JavaScript/210216 Iterables.md",
-    "JavaScript/210216.md",
-    "210218.md",
-    "210217.md",
-    "JavaScript/210210 Array methods pt.2.md",
-    "210216.md"
+    "acc/ryuj0415@gmail.com.md",
+    "acc/leedohyeong1@naver.com.md",
+    "acc/jiwonyoo1102@gmail.com.md",
+    "acc/jione.eu@aikomi.co.jp.md",
+    "acc/jione.eu@gmail.com.md",
+    "acc/eu.j.jii@gmail.com.md"
   ]
 }
