--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "b8080671d898b8c6",
+        "id": "70fddda6df86a18b",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "JavaScript/210218 WeakMap and WeakSet.md",
+            "file": "JavaScript/210221 Regular Expression.md",
             "mode": "preview"
           }
         }
@@ -71,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "JavaScript/210218 WeakMap and WeakSet.md",
+                "file": "JavaScript/210221 Regular Expression.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -114,15 +114,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "JavaScript/210221 Regular Expression.md",
     "JavaScript/210218 WeakMap and WeakSet.md",
-    "JavaScript/210120 Garbage Collection.md",
-    "JavaScript/210217 Map and Set pt.2.md",
     "Untitled.md",
-    "JavaScript/210216 Map and Set pt.1.md",
-    "JavaScript/210216 Map and Set.md",
-    "acc/ryuj0415@gmail.com.md",
-    "acc/leedohyeong1@naver.com.md",
-    "acc/jiwonyoo1102@gmail.com.md",
-    "acc/jione.eu@aikomi.co.jp.md"
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/인물/210201 이성계.md",
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md",
+    "ReadingNote/Books.md",
+    "ReadingNote/짧고 굵게 일합니다.md",
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/인물/210125 정도전.md",
+    "JavaScript/210120 Garbage Collection.md",
+    "JavaScript/210217 Map and Set pt.2.md"
   ]
 }
