--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "2e956c2362413b7a",
+        "id": "7fee64c3a9bcd74e",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "acc/ryuj0415@gmail.com.md",
+            "file": "PHP/0. Fundamentals/210324.md",
             "mode": "source"
           }
         }
@@ -53,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 385.5121879577637
+    "width": 385.5121879577637,
+    "collapsed": true
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -70,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "acc/ryuj0415@gmail.com.md",
+                "file": "PHP/0. Fundamentals/210324.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -113,15 +114,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "acc/ryuj0415@gmail.com.md",
+    "PHP/0. Fundamentals/210324.md",
     "Untitled.md",
+    "acc/ryuj0415@gmail.com.md",
     "알고리즘과 자료구조 스터디/week1/배열과 연결리스트.md",
     "알고리즘과 자료구조 스터디/커리큘럼.md",
     "todo/120227.md",
     "알고리즘과 자료구조 스터디/Untitled.md",
     "알고리즘과 자료구조 스터디/운영방침.md",
     "Algorithm/210227 공부순서.md",
-    "Blog/Gatsby로 블로그 만드는 과정 1.md",
-    "120227.md"
+    "Blog/Gatsby로 블로그 만드는 과정 1.md"
   ]
 }
