--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "7fee64c3a9bcd74e",
+        "id": "1d3b0d65fc89bab7",
         "type": "leaf",
-        "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Aikomi Meeting/KT Meeting/210322 Monday.md",
+            "file": "Miracle Morning/210414 - Wed.md",
             "mode": "source"
           }
         }
@@ -70,10 +69,12 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Aikomi Meeting/KT Meeting/210322 Monday.md",
+                "file": "Miracle Morning/210414 - Wed.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
+                "showSearch": false,
+                "searchQuery": "",
                 "backlinkCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -109,16 +110,17 @@
     "width": 315,
     "collapsed": true
   },
+  "active": "1d3b0d65fc89bab7",
   "lastOpenFiles": [
-    "Aikomi Meeting/KT Meeting/210322 Monday.md",
-    "Database/Google Firebase/201027 Firebase setTimeout.md",
-    "Database/MySQL/201122 MySQL Basic pt.1.md",
-    "Blog/Gatsby로 블로그 만드는 과정 1.md",
-    "Software Development/Agile programming and TDD + BDD.md",
-    "알고리즘과 자료구조 스터디/커리큘럼.md",
-    "알고리즘과 자료구조 스터디/week1/배열과 연결리스트.md",
-    "PHP/0. Fundamentals/210324.md",
-    "Untitled.md",
-    "acc/ryuj0415@gmail.com.md"
+    "Miracle Morning/210414 - Wed.md",
+    "JavaScript/210131 4.8 Object to primitive coversion.md",
+    "JavaScript/210128 4.7 Symbol type.md",
+    "JavaScript/210126 4.6 Optional chaining.md",
+    "JavaScript/210125 4.5 Constructor, operator 'new'.md",
+    "JavaScript/210125 4.4 Method and 'this'.md",
+    "JavaScript/210120 4.3 Garbage Collection.md",
+    "JavaScript/210119 4.2 Object References and Copying.md",
+    "JavaScript/210118 Test automation with Mocha & Polyfill.md",
+    "JavaScript/210118 4.1 Objects.md"
   ]
 }
